ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eagledream-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: eagledream.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
          - path: /another-service
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3006
